--- a/src/assets/TokenListWithAge.module.css
+++ b/src/assets/TokenListWithAge.module.css
@@ -15,7 +15,7 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 600;
   color: white;
   margin: 0;
@@ -23,7 +23,7 @@
 
 .controls {
   display: flex;
-  gap: 10px;
+  gap: 0px;
   align-items: center;
 }
 
@@ -37,6 +37,7 @@
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
+
 
 .button:hover {
   background-color: #372B7A;
@@ -61,8 +62,7 @@
 
 .filterButton {
   background-color: transparent;
-  border: 1px solid #666;
-  border-radius: 4px;
+  /* border: 1px solid #666; */
   padding: 8px;
   color: white;
   cursor: pointer;
@@ -466,15 +466,21 @@
 }
 
 @media (max-width: 768px) {
-  .header {
-    flex-direction: column;
-    align-items: flex-start;
+ .header {
+    margin-top: 40px;
+  } 
+  .title{
+    font-size: 15px;
+  }
+  .controls img{
+    height: 18px;
+    width: 18px;
   }
   
-  .controls {
+  /* .controls {
     width: 100%;
     justify-content: space-between;
-  }
+  } */
   
   .tokenGrid {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
